--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
 #nomes{
     display: flex;
     width: 40vw;
-    height: 50vh;
+    height: 55vh;
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-end;
@@ -106,6 +106,7 @@ p{
 #lamina{
 margin-bottom: 70px;
 margin-left: 50px;
+color: #3D5200;
 }
 #negocio{
     color: white;
