--- a/style.css
+++ b/style.css
@@ -245,6 +245,8 @@ h1 {
     height: 80vh;
     border: 1px solid black;
     overflow: hidden;
+    justify-content: center;
+    align-items: center;
 }
 .poder {
     display: flex;
@@ -252,14 +254,27 @@ h1 {
     width: 500px;
     height: 500px;
     border-radius: 20px;
-    
 }
 #poder-ult{
-    background-image: url(imagem/ult.jpg);
+    background-image:linear-gradient(180deg, rgba(0, 0, 0, 0.00) 30.96%, #000 100%) , url(imagem/ult.jpg);
     background-size: 198%;
     background-position: center;
     background-repeat: no-repeat;
-
 }
-
+#poder-desviar{
+    background-image:linear-gradient(180deg, rgba(0, 0, 0, 0.00) 30.96%, #000 100%) , url(imagem/desviar.png);
+    background-size: 198%;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+#poder-shuriken{
+    background-image:linear-gradient(180deg, rgba(0, 0, 0, 0.00) 30.96%, #000 100%) , url(imagem/shuriken.png);
+    background-size: 198%;
+    background-position: center;
+    background-repeat: no-repeat;
+    transition: ease 0.3s;
+}
+#poder-shuriken:hover{
+    background-image:linear-gradient(180deg, rgba(0, 0, 0, 0.3) 20%, #000 100%) , url(imagem/shuriken.png);
+}
 /* fim carrosel de habilidades */
