--- a/style.css
+++ b/style.css
@@ -239,7 +239,7 @@ h1 {
     margin-top: 30px;
 }
 
-#habilidades-caro {
+.habilidades-caro {
     display: flex;
     width: 99vw;
     height: 80vh;
@@ -261,21 +261,43 @@ h1 {
     background-position: center;
     background-repeat: no-repeat;
 }
+#poder-ult:hover{
+    background-image:linear-gradient(180deg, rgba(0, 0, 0, 0.6) 30.96%, #000 100%) , url(imagem/ult.jpg);
+}
+
 #poder-desviar{
     background-image:linear-gradient(180deg, rgba(0, 0, 0, 0.00) 30.96%, #000 100%) , url(imagem/desviar.png);
     background-size: 198%;
     background-position: center;
     background-repeat: no-repeat;
 }
+#poder-desviar:hover{
+    background-image:linear-gradient(180deg, rgba(0, 0, 0, 0.6) 30.96%, #000 100%) , url(imagem/desviar.png);
+}
+
 #poder-shuriken{
     background-image:linear-gradient(180deg, rgba(0, 0, 0, 0.00) 30.96%, #000 100%) , url(imagem/shuriken.png);
     background-size: 198%;
     background-position: center;
     background-repeat: no-repeat;
     transition: ease 0.3s;
-    
 }
 #poder-shuriken:hover{
     background-image:linear-gradient(180deg, rgba(0, 0, 0, 0.6) 30.96%, #000 100%) , url(imagem/shuriken.png);
+}
+
+/* botoes do carrosel */
+#proximo{
+    font-size: xxx-large;
+    margin-left: 20px;
+    font-weight: bolder;
+    cursor: pointer;
+}
+
+#antes{
+    font-size: xxx-large;
+    margin-right: 20px;
+    font-weight: bolder;
+    cursor: pointer;
 }
 /* fim carrosel de habilidades */
