--- a/style.css
+++ b/style.css
@@ -164,8 +164,6 @@ p {
     align-items: center;
     justify-content: space-around;
     flex-direction: row;
-    opacity: 0; 
-    transition: opacity 0.5s ease;
 }
 
 #botao2 {
@@ -193,13 +191,13 @@ p {
 
 #logos {
     display: flex;
-    width: 500px;
+    width: 400px;
     height: 100px;
     justify-content: start;
     align-items: center;
     flex-direction: row;
     justify-content: space-around;
-    padding-right: 100px;
+    padding-right: 70px;
 
 }
 
@@ -378,4 +376,10 @@ background-color: gray;
 border-radius: 10px;
 margin-top: 10px;
 justify-content: space-around;
+}
+
+.bloco{
+    width: 250px;
+    height: 130px;
+    background-color: red;
 }
