--- a/style.css
+++ b/style.css
@@ -136,6 +136,7 @@ p {
     flex-direction: column;
     justify-content: space-around;
 }
+
 /* botaozinho */
 
 #botao {
@@ -226,8 +227,8 @@ p {
     display: flex;
     width: 99vw;
     height: 100vh;
-   flex-direction: column;
-   justify-content: start;
+    flex-direction: column;
+    justify-content: start;
     background: rgb(161, 208, 26);
     background: linear-gradient(180deg, rgb(131, 163, 36) 30%, rgba(215, 212, 208, 1) 100%);
 }
@@ -249,8 +250,9 @@ h1 {
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    
+
 }
+
 .poder {
     display: flex;
     background-color: gray;
@@ -261,44 +263,48 @@ h1 {
     transition: 0.5s;
     left: calc(50% - 250px);
 }
-#poder-ult{
-    background-image:linear-gradient(180deg, rgba(0, 0, 0, 0.00) 30.96%, #000 100%) , url(imagem/ult.jpg);
+
+#poder-ult {
+    background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 30.96%, #000 100%), url(imagem/ult.jpg);
     background-size: 198%;
     background-position: center;
     background-repeat: no-repeat;
-    transform: translateX(0); 
+    transform: translateX(0);
     transition: ease 0.3s;
-}
-#poder-ult:hover{
-    background-image:linear-gradient(180deg, rgba(0, 0, 0, 0.6) 30.96%, #000 100%) , url(imagem/ult.jpg);
 }
 
-#poder-desviar{
-    background-image:linear-gradient(180deg, rgba(0, 0, 0, 0.00) 30.96%, #000 100%) , url(imagem/desviar.png);
-    background-size: 198%;
-    background-position: center;
-    background-repeat: no-repeat;
-    transform: translateX(0); 
-    transition: ease 0.3s;
-}
-#poder-desviar:hover{
-    background-image:linear-gradient(180deg, rgba(0, 0, 0, 0.6) 30.96%, #000 100%) , url(imagem/desviar.png);
+#poder-ult:hover {
+    background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.6) 30.96%, #000 100%), url(imagem/ult.jpg);
 }
 
-#poder-shuriken{
-    background-image:linear-gradient(180deg, rgba(0, 0, 0, 0.00) 30.96%, #000 100%) , url(imagem/shuriken.png);
+#poder-desviar {
+    background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 30.96%, #000 100%), url(imagem/desviar.png);
     background-size: 198%;
     background-position: center;
     background-repeat: no-repeat;
-    transform: translateX(0); 
+    transform: translateX(0);
     transition: ease 0.3s;
 }
-#poder-shuriken:hover{
-    background-image:linear-gradient(180deg, rgba(0, 0, 0, 0.6) 30.96%, #000 100%) , url(imagem/shuriken.png);
+
+#poder-desviar:hover {
+    background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.6) 30.96%, #000 100%), url(imagem/desviar.png);
+}
+
+#poder-shuriken {
+    background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 30.96%, #000 100%), url(imagem/shuriken.png);
+    background-size: 198%;
+    background-position: center;
+    background-repeat: no-repeat;
+    transform: translateX(0);
+    transition: ease 0.3s;
+}
+
+#poder-shuriken:hover {
+    background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.6) 30.96%, #000 100%), url(imagem/shuriken.png);
 }
 
 /* botoes do carrosel */
-#proximo{
+#proximo {
     display: flex;
     width: 70px;
     height: 70px;
@@ -309,13 +315,13 @@ h1 {
     font-weight: bolder;
     cursor: pointer;
     color: #fff;
-    background-color:#3D5200;
+    background-color: #3D5200;
     font-size: xxx-large;
     font-family: monospace;
     font-weight: bold;
 }
 
-#antes{
+#antes {
     display: flex;
     width: 70px;
     height: 70px;
@@ -331,10 +337,11 @@ h1 {
     font-family: monospace;
     font-weight: bold;
 }
+
 /* fim carrosel de habilidades */
 
 /* desenhos */
-#geral{
+#geral {
     display: flex;
     width: 99vw;
     height: 100vh;
@@ -344,7 +351,8 @@ h1 {
     background-color: #d7d4d0;
     justify-content: end;
 }
-#canto{
+
+#canto {
     display: flex;
     width: 60vw;
     justify-content: center;
@@ -352,7 +360,8 @@ h1 {
     /* background-color: red; */
     align-items: center;
 }
-#desenhar{
+
+#desenhar {
     width: 800px;
     height: 520px;
     /* background-color: yellow; */
@@ -360,26 +369,27 @@ h1 {
     border-radius: 20px;
     background-color: #f0ece7;
 }
-#status{
+
+#status {
     display: flex;
     width: 800px;
     height: 50px;
     /* background-color: blue; */
     justify-content: center;
-    color: #A1D01A;
-        
+    color: black;
+
 }
 
-#ferramentas{
-display: flex;
-width: 800px;
-height: 130px; 
-border-radius: 10px;
-margin-top: 10px;
-justify-content: space-around;
+#ferramentas {
+    display: flex;
+    width: 800px;
+    height: 130px;
+    border-radius: 10px;
+    margin-top: 10px;
+    justify-content: space-around;
 }
 
-.bloco{
+.bloco {
     width: 250px;
     height: 130px;
     background-color: gray;
@@ -388,26 +398,55 @@ justify-content: space-around;
     justify-content: space-around;
     border-radius: 10px;
 }
-.formas{
+
+.formas {
     width: 60px;
     height: 60px;
-    border: 3px solid rgb(159, 159, 159);
+    border: 4px solid rgb(159, 159, 159);
 }
-#titulo{
-width: 250px;
-margin-top: 10px;
-display: flex;
-justify-content: center;
-font: 100 22px 'nodle';
+
+.formas:hover {
+    border: 4px solid rgb(159, 159, 159);
 }
-#bola{
- border-radius: 50%;
+
+#titulo {
+    width: 250px;
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    font: 100 22px 'nodle';
+}
+
+#bola {
+    border-radius: 50%;
 }
 #triangulo{
-width: 50px; 
-  height: 50px; 
-  border-left: 25px solid transparent;
-  border-right: 25px solid transparent;
-  border-bottom: 40px solid #5386E4;
-  
+    width: 0; 
+    height: 0; 
+    border-top: transparent;
+    border-left: 30px solid transparent;
+    border-right: 30px solid transparent;
+    border-bottom: 50px solid rgb(159, 159, 159);
+}
+
+/* segundo bloco */
+#options{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+ #aparato{
+    width: 70px;
+    height: 70px;
+    margin:10px;
+ }
+/* --- */
+/* terceiro bloco */
+#colors{
+    display: flex;
+    align-items: center;
+}
+input{
+    margin-top: 30px;
+    margin-bottom: 50px;
 }
