--- a/style.css
+++ b/style.css
@@ -365,7 +365,7 @@ h1 {
     /* background-color: yellow; */
     border: 2px solid black;
     border-radius: 20px;
-    background-color: #f0ece7;
+    background-color: #fff;
 }
 
 #status {
