--- a/style.css
+++ b/style.css
@@ -365,7 +365,7 @@ h1 {
     /* background-color: yellow; */
     border: 2px solid black;
     border-radius: 20px;
-    background-color: #fff;
+    background-color: #f0ece7;
 }
 
 #status {
@@ -397,15 +397,6 @@ h1 {
     border-radius: 10px;
 }
 
-.formas {
-    width: 60px;
-    height: 60px;
-    border: 4px solid rgb(159, 159, 159);
-}
-
-.formas:hover {
-    border: 4px solid rgb(159, 159, 159);
-}
 
 #titulo {
     width: 250px;
@@ -413,18 +404,6 @@ h1 {
     display: flex;
     justify-content: center;
     font: 100 22px 'nodle';
-}
-
-#bola {
-    border-radius: 50%;
-}
-#triangulo{
-    width: 0; 
-    height: 0; 
-    border-top: transparent;
-    border-left: 30px solid transparent;
-    border-right: 30px solid transparent;
-    border-bottom: 50px solid rgb(159, 159, 159);
 }
 
 /* segundo bloco */
