--- a/style.css
+++ b/style.css
@@ -256,8 +256,8 @@ h1 {
 .poder {
     display: flex;
     background-color: gray;
-    width: 400px;
-    height: 400px;
+    width: 500px;
+    height: 500px;
     border-radius: 20px;
     padding: 20px;
     transition: 0.5s;
@@ -265,44 +265,37 @@ h1 {
 }
 
 #poder-ult {
-    background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 30.96%, #000 100%), url(imagem/ult.jpg);
-    background-size: 198%;
-    background-position: center;
-    background-repeat: no-repeat;
-    transform: translateX(0);
-    transition: ease 0.3s;
-}
-
-#poder-ult:hover {
     background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.6) 30.96%, #000 100%), url(imagem/ult.jpg);
-}
-
-#poder-desviar {
-    background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 30.96%, #000 100%), url(imagem/desviar.png);
     background-size: 198%;
     background-position: center;
     background-repeat: no-repeat;
     transform: translateX(0);
     transition: ease 0.3s;
+    display: flex;
+    align-items: end;
+    justify-content: center;
 }
-
-#poder-desviar:hover {
+#descricao_ult{
+    display: flex;
+    
+}
+#poder-desviar {
     background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.6) 30.96%, #000 100%), url(imagem/desviar.png);
+    background-size: 198%;
+    background-position: center;
+    background-repeat: no-repeat;
+    transform: translateX(0);
+    transition: ease 0.3s;
 }
 
 #poder-shuriken {
-    background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 30.96%, #000 100%), url(imagem/shuriken.png);
+    background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.6) 30.96%, #000 100%), url(imagem/shuriken.png);
     background-size: 198%;
     background-position: center;
     background-repeat: no-repeat;
     transform: translateX(0);
     transition: ease 0.3s;
 }
-
-#poder-shuriken:hover {
-    background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.6) 30.96%, #000 100%), url(imagem/shuriken.png);
-}
-
 /* botoes do carrosel */
 #proximo {
     display: flex;
