--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ h2 {
 }
 
 h3 {
-    font: 600 35px 'nodle';
+    font: 400 35px 'nodle';
 }
 
 p {
@@ -263,7 +263,7 @@ h1 {
     transition: 0.5s;
     left: calc(50% - 250px);
 }
-
+/* primeiro poder */
 #poder-ult {
     background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.6) 30.96%, #000 100%), url(imagem/ult.jpg);
     background-size: 198%;
@@ -277,8 +277,24 @@ h1 {
 }
 #descricao_ult{
     display: flex;
-    
+    justify-content: start;
+    align-items: start;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 500px;
+    height: 350px;
+    color: white;
 }
+#descricao_ult h2{
+    font: 400 50px 'nodle';
+    margin-bottom: 30px;
+}
+#descricao_ult h4{
+    color: #A1D01A;
+   font: 300 20px 'nodle';
+}
+/* fim */
+/* segunda */
 #poder-desviar {
     background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.6) 30.96%, #000 100%), url(imagem/desviar.png);
     background-size: 198%;
@@ -286,6 +302,19 @@ h1 {
     background-repeat: no-repeat;
     transform: translateX(0);
     transition: ease 0.3s;
+    display: flex;
+    align-items: end;
+    justify-content: center;
+}
+#descricao_desviar{
+    display: flex;
+    justify-content: start;
+    align-items: start;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 500px;
+    height: 350px;
+    color: white;
 }
 
 #poder-shuriken {
